--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
@@ -43,7 +44,5 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
-    implementation 'joda-time:joda-time:2.9.9'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.1'
-
 }
