--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,17 @@
 buildscript {
+    ext.versions = [
+            'compileSdk'    : 28,
+            'minSdk'        : 21,
+            'targetSdk'     : 28,
+
+            'supportLibrary': '28.0.0-alpha3'
+    ]
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
     }
 }
 
