Restructuring the app to use kotlin and navigation

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
         android:name=".KnellDebugApp"
-        tools:replace="android:name" />
+        tools:replace="android:name"
+        tools:ignore="GoogleAppIndexingWarning" />
 
 </manifest>
