--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 buildscript {
     ext.versions = [
+            'kotlin'        : '1.2.41',
             'compileSdk'    : 28,
             'minSdk'        : 21,
             'targetSdk'     : 28,
 
-            'supportLibrary': '28.0.0-alpha3'
+            'supportLibrary': '28.0.0-alpha3',
+
+            'navigation'    : '1.0.0-alpha02'
     ]
     repositories {
         google()
@@ -12,6 +15,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
     }
 }
 
