--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ android:
       - 'android-sdk-license-.+'
 
 before_script:
+  - yes | sdkmanager "platforms;android-27"
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-window &
   - android-wait-for-emulator
