--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,18 @@
 buildscript {
     ext.versions = [
-            'kotlin'        : '1.2.41',
-            'compileSdk'    : 28,
-            'minSdk'        : 21,
-            'targetSdk'     : 28,
+            'kotlin'    : '1.3.21',
+            'compileSdk': 28,
+            'minSdk'    : 21,
+            'targetSdk' : 28,
 
-            'supportLibrary': '28.0.0-alpha3',
-
-            'navigation'    : '1.0.0-alpha02'
+            'navigation': '1.0.0'
     ]
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
     }
 }
